--- a/richardxiao.yml
+++ b/richardxiao.yml
@@ -1,4 +1,4 @@
 #
 name: Richard Xiao
 
-I am a statistics student.
+NC State Graduate with Statistics Degree. Versatile Data Analyst with Extensive Cross-Industry Experience
